--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+    ext {
+        kotlin_version = "1.4.10"
+        kotlin_coroutines = "1.3.9"
+        androidx_test = "1.3.0"
+        google_truth = "1.0"
+    }
     repositories {
         google()
         jcenter()
